; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp.c_pgp_get_digest_code.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp.c_pgp_get_digest_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.digest_info = type { i32, i64 }

@digest_list = common dso_local global %struct.digest_info* null, align 8
@PXE_PGP_UNSUPPORTED_HASH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pgp_get_digest_code(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.digest_info*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load %struct.digest_info*, %struct.digest_info** @digest_list, align 8
  store %struct.digest_info* %5, %struct.digest_info** %4, align 8
  br label %6

6:                                                ; preds = %23, %1
  %7 = load %struct.digest_info*, %struct.digest_info** %4, align 8
  %8 = getelementptr inbounds %struct.digest_info, %struct.digest_info* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %26

11:                                               ; preds = %6
  %12 = load %struct.digest_info*, %struct.digest_info** %4, align 8
  %13 = getelementptr inbounds %struct.digest_info, %struct.digest_info* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @pg_strcasecmp(i64 %14, i8* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = load %struct.digest_info*, %struct.digest_info** %4, align 8
  %20 = getelementptr inbounds %struct.digest_info, %struct.digest_info* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %2, align 4
  br label %28

22:                                               ; preds = %11
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.digest_info*, %struct.digest_info** %4, align 8
  %25 = getelementptr inbounds %struct.digest_info, %struct.digest_info* %24, i32 1
  store %struct.digest_info* %25, %struct.digest_info** %4, align 8
  br label %6

26:                                               ; preds = %6
  %27 = load i32, i32* @PXE_PGP_UNSUPPORTED_HASH, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %26, %18
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @pg_strcasecmp(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
